Progress with cellToRow compression